--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -571,12 +571,6 @@ body {
     font-family: 5rem;
   }
 }
-@media only screen and (max-width: 112.5em) {
-  .heading-primary--main {
-    letter-spacing: 1rem;
-    font-family: 5rem;
-  }
-}
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -585,11 +579,6 @@ body {
   animation: moveInRight 1s ease-out;
 }
 @media only screen and (max-width: 37.5em) {
-  .heading-primary--sub {
-    letter-spacing: 0.5rem;
-  }
-}
-@media only screen and (max-width: 112.5em) {
   .heading-primary--sub {
     letter-spacing: 0.5rem;
   }
@@ -612,11 +601,6 @@ body {
   }
 }
 @media only screen and (max-width: 37.5em) {
-  .heading-secondary {
-    font-size: 2.5rem;
-  }
-}
-@media only screen and (max-width: 112.5em) {
   .heading-secondary {
     font-size: 2.5rem;
   }
@@ -1210,6 +1194,12 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
+  overflow-y: auto;
+}
+@media only screen and (max-width: 37.5em) {
+  .popup {
+    overflow-y: auto;
+  }
 }
 @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
   .popup {
@@ -1233,10 +1223,23 @@ body {
   opacity: 0;
   transform: translate(-50%, -50%) scale(0);
   transition: all 0.5s 0.2s;
+  overflow-y: auto;
+}
+@media only screen and (max-width: 37.5em) {
+  .popup__content {
+    height: auto;
+    width: 86%;
+  }
 }
 .popup__left {
   width: 33.333333%;
   display: table-cell;
+}
+@media only screen and (max-width: 37.5em) {
+  .popup__left {
+    width: 50%;
+    display: inline-block;
+  }
 }
 .popup__right {
   width: 66.6666667%;
@@ -1244,9 +1247,21 @@ body {
   vertical-align: middle;
   padding: 3rem 5rem;
 }
+@media only screen and (max-width: 37.5em) {
+  .popup__right {
+    width: 100%;
+    display: inline-block;
+  }
+}
 .popup__img {
   display: block;
   width: 100%;
+}
+@media only screen and (max-width: 37.5em) {
+  .popup__img {
+    display: table-cell;
+    margin-left: 50%;
+  }
 }
 .popup__text {
   font-size: 1.4rem;
@@ -1284,7 +1299,6 @@ body {
 .popup__close:hover {
   color: #55c57a;
 }
-
 .story {
   width: 75%;
   margin: 0 auto;
@@ -1304,11 +1318,6 @@ body {
   }
 }
 @media only screen and (max-width: 37.5em) {
-  .story {
-    transform: skewX(0);
-  }
-}
-@media only screen and (max-width: 112.5em) {
   .story {
     transform: skewX(0);
   }
@@ -1336,11 +1345,6 @@ body {
     transform: translateX(-3rem) skewX(0);
   }
 }
-@media only screen and (max-width: 112.5em) {
-  .story__shape {
-    transform: translateX(-3rem) skewX(0);
-  }
-}
 .story__img {
   height: 100%;
   transform: translateX(-4rem) scale(1.4);
@@ -1351,11 +1355,6 @@ body {
   transform: skewX(12deg);
 }
 @media only screen and (max-width: 37.5em) {
-  .story__text {
-    transform: skewX(0);
-  }
-}
-@media only screen and (max-width: 112.5em) {
   .story__text {
     transform: skewX(0);
   }
@@ -1536,12 +1535,6 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
   }
 }
-@media only screen and (max-width: 112.5em) {
-  .header {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
-  }
-}
 .header__logo-box {
   position: absolute;
   top: 4rem;
@@ -1586,12 +1579,6 @@ body {
     right: 3rem;
   }
 }
-@media only screen and (max-width: 112.5em) {
-  .navigation__button {
-    top: 3rem;
-    right: 3rem;
-  }
-}
 .navigation__background {
   height: 6rem;
   width: 6rem;
@@ -1610,12 +1597,6 @@ body {
   }
 }
 @media only screen and (max-width: 37.5em) {
-  .navigation__background {
-    top: 3.5rem;
-    right: 3.5rem;
-  }
-}
-@media only screen and (max-width: 112.5em) {
   .navigation__background {
     top: 3.5rem;
     right: 3.5rem;
