--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -46,7 +46,7 @@ lem=16px
     @if $breakpoint == tab-land{
         @media only screen and (max-width: 75em) {@content};       //1200px
     }
-    @if $breakpoint == phone{
+    @if $breakpoint == desktop{
         @media only screen and (max-width: 112.5em) {@content};       //1800px
     }
 }
